[package]
name = "ping-proxy-wasm"
version = "0.0.0"
authors = [ "Well",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ping-proxy]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.1"
